<resources>
    <string name="app_name">Hashtable</string>
    <string name="last_name">last name</string>
    <string name="age">age</string>
    <string name="number">number</string>
    <string name="add_user">add user</string>
    <string name="login">login</string>
    <string name="add_users">Add Users</string>
    <string name="name">name</string>
    <string name="textview">TextView</string>
    <string name="nothing">nothing</string>
    <string name="name1">Name</string>
    <string name="last_name1">Last name</string>
    <string name="age1">Age</string>
    <string name="number1">Number</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="delete">DELETE</string>
    <string name="generate_user">GENERATE USER</string>
    <string name="search_hint">Поиск</string>
    <string name="login_hint">Логин</string>
    <string name="name_hint">Имя</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="age_hint">Возраст</string>
    <string name="init_size">Введите размер таблицы</string>
</resources>
