<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="197dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/nothing" />

        <TextView
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/nothing" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/nothing" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="148dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/age" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>