<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="376dp" />

        </LinearLayout>

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="CLEAR ALL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="48dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:hapticFeedbackEnabled="false"
                android:text="@string/add_users"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/login" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/name" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/lastname"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/age" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/age"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_user"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>